--- a/jsonrpc/jsonrpc.html
+++ b/jsonrpc/jsonrpc.html
@@ -21,6 +21,16 @@
         <label for="node-config-input-port"><i class="fa fa-user"></i> Port</label>
         <input type="text" id="node-config-input-port">
     </div>
+    
+    <div class="form-row">
+        <label for="node-config-input-username"><i class="fa fa-user"></i> Username</label>
+        <input type="text" id="node-config-input-username">
+    </div>
+    
+    <div class="form-row">
+        <label for="node-config-input-password"><i class="fa fa-user"></i> Password</label>
+        <input type="text" id="node-config-input-password">
+    </div>
 </script>
 
 <script type="text/javascript">
@@ -31,6 +41,8 @@
             namespace: { value:"default" },
             host:      { value:"localhost", required: true },
             port:      { value:"1880", required: true, validate:RED.validators.number() },
+            username:  { value: "" },
+            password:  { value: "" },
         },
         label: function() {
             return this.name || "";
